update gitignore and sdd

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/ICadComp
 src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/ICadComponent$PathType.class
 src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/ICadComponent.class
 src/AILiftCreate/out/production/AILiftCreate/Stefano_package/exceptions/CollisionException.class
+other/
