try solving problem with eclipse export

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-srs/~WRL0924.tmp
-srs/~$s_p1_ferro_enrico.odt
-srs/~WRL2537.tmp
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/Core.class
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/Database.class
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/DrawingProject.class
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/Generator.class
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/Installer.class
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/Parser.class
-src/AILiftCreate/out/production/AILiftCreate/AIMSLab_server_interaction/User.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/cad_project/AiLiftProject.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/cad_project/Main.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadCircle$1.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadCircle.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadComponent.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadPath$1.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadPath.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadRectangle$1.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/CadRectangle.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/ICadComponent$Axis.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/ICadComponent$PathType.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/components/ICadComponent.class
-src/AILiftCreate/out/production/AILiftCreate/Stefano_package/exceptions/CollisionException.class
+src/AILiftCreate/out
 other/
+src/AILiftCreate/bin
