--- a/src/AILiftCreate/.classpath
+++ b/src/AILiftCreate/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/AILiftCreate/src"/>
-	<classpathentry kind="lib" path="C:/Users/enric/Documents/SWENGProject/lib/jackson-databind-2.6.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/enric/Documents/SWENGProject/lib/jackson-core-2.6.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/enric/Documents/SWENGProject/lib/jackson-annotations-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-databind-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-core-2.6.3.jar"/>
+	<classpathentry kind="lib" path="/lib/jackson-annotations-2.6.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
