--- a/src/AILiftCreate/.classpath
+++ b/src/AILiftCreate/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/AILiftCreate/src"/>
-	<classpathentry kind="lib" path="/lib/jackson-databind-2.6.3.jar"/>
-	<classpathentry kind="lib" path="/lib/jackson-core-2.6.3.jar"/>
-	<classpathentry kind="lib" path="/lib/jackson-annotations-2.6.3.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Enrico/Documents/SWEngProject/lib/jackson-annotations-2.6.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Enrico/Documents/SWEngProject/lib/jackson-core-2.6.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Enrico/Documents/SWEngProject/lib/jackson-databind-2.6.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
