--- a/src/AILiftCreate/.classpath
+++ b/src/AILiftCreate/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/enric/Documents/SWENGProject/lib/jackson-annotations-2.6.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/enric/Documents/SWENGProject/lib/jackson-core-2.6.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/enric/Documents/SWENGProject/lib/jackson-databind-2.6.3.jar"/>
+	<classpathentry kind="var" path="APPLICATION_HOME_DIR/redist/annotations-java8.jar"/>
 	<classpathentry kind="output" path="out/production/AILiftCreate"/>
 </classpath>
